fix script in deployvps

--- a/.github/workflows/deployvps.yml
+++ b/.github/workflows/deployvps.yml
@@ -36,12 +36,14 @@ jobs:
         strip_components: 2
 
     - name: Restart app via SSH
-      uses: appleboy/ssh-action@v1.1.0
+      uses: appleboy/ssh-action@v1.2.0
       with:
         host: ${{ secrets.VPS_SSH_HOST }}
         username: ${{ secrets.VPS_SSH_USERNAME2 }}
         key: ${{ secrets.VPS_SSH_PRIVATE_KEY }}
         port: ${{ secrets.VPS_SSH_PORT }}
-        script: ssh ${{ secrets.VPS_SSH_PATH2 }} "chmod +x ~/RadioModBackend.NET; ~/radiomod.sh restart"
+        script: |
+          chmod +x ~/RadioModBackend.NET
+          ~/radiomod.sh restart
       
 
