--- a/src/RadioModBackend.NET.csproj
+++ b/src/RadioModBackend.NET.csproj
@@ -19,14 +19,14 @@
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="1.2.0" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="9.0.1" />
-    <PackageReference Include="YoutubeExplode" Version="6.5.1" />
+    <!--<PackageReference Include="YoutubeExplode" Version="6.5.1" />-->
   </ItemGroup>
 
-  <!--<ItemGroup>
+  <ItemGroup>
     <Reference Include="YoutubeExplode">
       <HintPath>..\external\YoutubeExplode.dll</HintPath>
     </Reference>
-  </ItemGroup>-->
+  </ItemGroup>
 
   <ItemGroup>
     <Folder Include="cache\" />
