--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,8 +67,22 @@ jobs:
       - name: Install cross-compilation tools (Linux ARM64)
         if: runner.os == 'Linux' && matrix.rid == 'linux-arm64'
         run: |
+          set -eux
           sudo dpkg --add-architecture arm64
+
+          sudo cp /etc/apt/sources.list /etc/apt/sources.list.bak
+          sudo sed -i 's|^deb http|deb [arch=amd64] http|' /etc/apt/sources.list
+          sudo sed -i 's|^deb https|deb [arch=amd64] https|' /etc/apt/sources.list
+
+          sudo tee /etc/apt/sources.list.d/arm64.list >/dev/null <<'EOF'
+          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble main restricted universe multiverse
+          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble-updates main restricted universe multiverse
+          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble-backports main restricted universe multiverse
+          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble-security main restricted universe multiverse
+          EOF
+
           sudo apt-get update
+
           sudo apt-get install -y \
             clang lld llvm \
             gcc-aarch64-linux-gnu g++-aarch64-linux-gnu \
