--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,18 +14,12 @@ jobs:
     strategy:
       matrix:
         include:
-          # Linux builds
+          # Linux builds (x64 only)
           - os: ubuntu-latest
             rid: linux-x64
             optimization: Size
           - os: ubuntu-latest
             rid: linux-x64
-            optimization: Speed
-          - os: ubuntu-latest
-            rid: linux-arm64
-            optimization: Size
-          - os: ubuntu-latest
-            rid: linux-arm64
             optimization: Speed
           # Windows builds
           - os: windows-latest
@@ -64,32 +58,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nuget-
 
-      - name: Install cross-compilation tools (Linux ARM64)
-        if: runner.os == 'Linux' && matrix.rid == 'linux-arm64'
-        run: |
-          set -eux
-          sudo dpkg --add-architecture arm64
-
-          sudo cp /etc/apt/sources.list /etc/apt/sources.list.bak
-          sudo sed -i 's|^deb http|deb [arch=amd64] http|' /etc/apt/sources.list
-          sudo sed -i 's|^deb https|deb [arch=amd64] https|' /etc/apt/sources.list
-
-          sudo tee /etc/apt/sources.list.d/arm64.list >/dev/null <<'EOF'
-          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble main restricted universe multiverse
-          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble-updates main restricted universe multiverse
-          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble-backports main restricted universe multiverse
-          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble-security main restricted universe multiverse
-          EOF
-
-          sudo apt-get update
-
-          sudo apt-get install -y \
-            clang lld llvm \
-            gcc-aarch64-linux-gnu g++-aarch64-linux-gnu \
-            binutils-aarch64-linux-gnu \
-            libc6-dev-arm64-cross \
-            zlib1g-dev:arm64
-            
       - name: Publish
         run: dotnet publish src/RadioModBackend.NET.csproj --configuration Release --runtime ${{ matrix.rid }} --output publish/${{ matrix.rid }}-${{ matrix.optimization }} --verbosity minimal /p:OptimizationPreference=${{ matrix.optimization }} /p:SelfContained=true /p:DebugType=None
 
