--- a/src/RadioModBackend.NET.csproj
+++ b/src/RadioModBackend.NET.csproj
@@ -17,7 +17,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AngleSharp" Version="1.3.0" />
+    <PackageReference Include="AngleSharp" Version="1.4.0" />
+	<!--<PackageReference Include="Microsoft.DotNet.ILCompiler" Version="10.0.0" PrivateAssets="all" />-->
     <!--<PackageReference Include="YoutubeExplode" Version="6.5.1" />-->
   </ItemGroup>
 
